# openGLparamsClion

./: CMakeLists.txt
res/shaders/: Basic.shader
src/: Application.cpp  CMakeLists.txt  VertexBuffer.cpp  VertexBuffer.h  main.cpp
